[project]
name = "mcp-server-coverage-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "egeres", email = "egeres.default@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mcp-server-coverage-report = "mcp_server_coverage_report:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
