[project]
name = "mcp-server-coverage-report"
version = "0.1.0"
description = "Minimal MCP server boilerplate with add function"
readme = "README.md"
authors = [
    { name = "egeres", email = "egeres.default@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.13.1",
    "mcp>=1.0.0",
]

[project.scripts]
mcp-server-coverage-report = "mcp_server_coverage_report:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
